[gd_scene load_steps=4 format=3 uid="uid://do5hdn7w0evwi"]

[ext_resource type="Script" uid="uid://dtgtxoyr4xxn3" path="res://scripts/Map props/LockZone.gd" id="1_a0i64"]
[ext_resource type="Texture2D" uid="uid://drg8puls0marl" path="res://art/ph_bumper_2.png" id="2_jhr8w"]

[sub_resource type="CircleShape2D" id="CircleShape2D_4ie43"]
radius = 30.0

[node name="LockZone" type="Area2D" node_paths=PackedStringArray("PlayerBindPivot")]
scale = Vector2(2, 2)
collision_mask = 2
script = ExtResource("1_a0i64")
Power = 1600.0
PlayerBindPivot = NodePath("Sprite2D")
metadata/_custom_type_script = "uid://dtgtxoyr4xxn3"

[node name="Sprite2D" type="Sprite2D" parent="."]
self_modulate = Color(0, 0.737255, 0.866667, 0.639216)
texture = ExtResource("2_jhr8w")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_4ie43")
debug_color = Color(0.88036, 0.245937, 0.589125, 0.42)

[connection signal="body_entered" from="." to="." method="_on_body_enter"]
[connection signal="body_exited" from="." to="." method="_on_body_exit"]
